clang/test/BSC/Negative/Ownership/RuleCheck/generic_with_owned_args2/generic_with_owned_args2.cbs
// RUN: %clang_cc1 -verify %s

// Test that _Owned qualifiers are allowed on template type parameters.
// Like C++ const qualifier, both "T _Owned" and "_Owned T" apply _Owned to the complete type T.
//
// When T = int*, both forms produce: int* _Owned (_Owned pointer to int)
// NOT: _Owned int* (pointer to _Owned int)
//
// The _Owned qualifier is applied to whatever type T is instantiated with.
// Validity is checked at instantiation time:
// - If T is instantiated with a pointer type (e.g., int*), then "_Owned T" = "int* _Owned" is valid
// - If T is instantiated with a non-pointer type (e.g., int), semantic errors occur at usage
//
// This follows C++'s behavior where "const T" with T=int* gives "int* const", not "const int*"
void Func_1<T>()
{
    _Static_assert(__is_same(T _Owned, _Owned T), "fail");
    T _Owned a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    (void)a;
}

void test() {
    Func_1<int*>();
    return;
}


void test2() {
    Func_1<int* _Owned>();
}

typedef int* _Owned ownedIntPtr;

void test3() {
    Func_1<ownedIntPtr>();
}

void test4() {
    Func_1<int>(); // expected-note {{in instantiation of function template specialization 'Func_1<int>' requested here}}
}

int main() {
    test();
    test2();
    test3();
    return 0;
}